fix: message won't overflow anymore when content is too large

--- a/src/plugins/collaboration/components/Message/styles.scss
+++ b/src/plugins/collaboration/components/Message/styles.scss
@@ -6,6 +6,7 @@
 
     &__wrap {
         flex: 1;
+        min-width: 0;
     }
 
     &__header {
